xff/gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: xff-gateway
  namespace: kgateway-system
  labels:
    example: xff-test
spec:
  gatewayClassName: xff-gateway
  listeners:
  - protocol: HTTP
    port: 80
    name: http
    allowedRoutes:
      namespaces:
        from: All
