xff/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: xff-test-route
  namespace: default
  labels:
    example: xff-test
spec:
  parentRefs:
    - name: xff-gateway
      namespace: kgateway-system
  rules:
    - backendRefs:
        - name: gw-test
          port: 80
